--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,119 @@
 * {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;	
 	color: grey;
-	margin: 0;
 }
 
 .header {
-	background-color: #73d1b7;
-	padding-top: 10px;
-	padding-bottom: 10px;	
+	background-color: #7b8a74;
+	height: 100%;
 	width: 100%;
+	text-align: center;
 }
 
 .vsebina {
-	margin-top: 20px;
+	margin-top: 40px;
+	margin-left: 0;
+	margin-bottom: 20px;
+	padding-top: 30px;
+	text-align: center;
+	border: 1px solid #7b8a74;
+}
+
+strong {
+	font-weight: 800;
+	font-size: 60px;
+	color: white;
 }
 
 h1 {
-	font-weight: 800;
-	font-size: 50px;
-	color: white;
-}
-
-h2 {
 	font-weight: 300;
 	font-size: 30px;
 	color: white;
-	margin-top: -20px;
+	padding-bottom: 10px;
+	padding-top: 5px;
 }
 
+p {
+	font-weight: 600;
+	font-size: 20px;
+	color: #7b8a74;
+}
 
+.podatki {
+	font-weight: 400;
+	font-size: 15px;
+}
+
+.tekst {
+	color: #97717e;
+}
+
+input {
+	text-align: center;
+	max-width: 400px;
+	margin: 0 auto;
+}
+
+#kolicina {
+	max-width: 100px;
+}
 
 .racun {
 	margin-top: 50px;
 	font-weight: 600;
 	font-size: 30px;
-	color: #73d1b7;
-}
-
-.obvestilo {
-	font-weight: 300;
-	font-size: 20px;
-	color: #73d1b7;
-
-}
-
-.selectpicker {
-	width: 200px;
-}
-
-.podatki {
-	margin-top: 50px;
-}
-
-.form-group {
-	width: 50%;
-}
-
-.kolicina {
-	width: 80px;
+	color: #7b8a74;
+	text-align: center;
 }
 
 .btn {
-	color: grey;
+	margin-bottom: 30px;
+	color: #7b8a74;
 }
 
 .btn:hover {
-	background-color: #73d1b7;
+	background-color: #7b8a74;
 	color: white;
-	border-color: #73d1b7;
+	border: #7b8a74;
+}
+
+.form-control {
+	color: #7b8a74;
 }
 
 .obvestilo {
 	font-weight: 300;
-	font-size: 25px;
-}
-
-a {
-	font-size: 15px;
-	font-weight: 400;
-	color: grey;
-}
-
-a:hover {
-	color: grey;
-}
-
-.nazaj {
-	margin-top: 50px;
+	color: #7b8a74;
+	font-size: 20px;
+	text-align: center;
+	margin-top: 30px;
 }
 
 em {
-	color: #73d1b7;
+	color: #97717e;
+	font-weight: 400;
 	font-size: 20px;
-	font-weight: 800;
 }
 
+a {
+	margin-top: 45px;
+	font-size: 15px;
+	font-weight: 400;
+	color: #97717e;
+}
+
+a:hover {
+	color: #7b8a74;
+}
+
+.nazaj {	
+	text-align: center;
+	margin-bottom: 25px;
+	margin-top: 25px;
+}
+
+.form-control:focus {
+	border: 1px solid #7b8a74;
+    outline: 0px none;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 10px rgba(123, 138, 116, 0.2);
+}
